@startuml ChatApp_AuthSecurity
'==============================================================
' Diagrama 4: Modulul de autentificare si securitate
' Flux: Config -> Controller -> Security -> Repository
'==============================================================

skinparam monochrome true
skinparam shadowing false
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam defaultFontName "Arial"
skinparam packageStyle rectangle
skinparam nodesep 35
skinparam ranksep 55

hide circle

top to bottom direction

title Modulul de autentificare si securitate

package "config" as PCfg {
    class SecurityConfig {
        + securityFilterChain(http) : SecurityFilterChain
        + passwordEncoder() : PasswordEncoder
        + authenticationManager(cfg) : AuthenticationManager
    }
}

package "controller" as PC {
    class AuthController {
        + register(req : RegisterRequest) : ResponseEntity
        + login(req : LoginRequest) : ResponseEntity
        + googleLogin(req : GoogleLoginRequest) : ResponseEntity
    }
}

package "security" as PSec {
    class JwtAuthFilter {
        # doFilterInternal(req, res, chain) : void
    }
    class WebSocketAuthInterceptor {
        + preSend(msg, channel) : Message
    }
    class JwtUtil {
        + generateToken(email) : String
        + extractEmail(token) : String
        + isTokenValid(token) : boolean
    }
    class CustomUserDetailsService {
        + loadUserByUsername(email) : UserDetails
    }
    class SecurityUtils {
        + getCurrentUser() : User
        + getCurrentUserId() : Long
    }
}

package "repository" as PR {
    interface UserRepository <<JpaRepository>>
}

package "dto (records)" as PD {
    class RegisterRequest <<record>>
    class LoginRequest <<record>>
    class GoogleLoginRequest <<record>>
    class AuthResponse <<record>>
}

class "Google Identity Services" as Google <<cloud>>

' Aliniere ---------------------------------------------------
JwtAuthFilter -[hidden]right- WebSocketAuthInterceptor
JwtUtil -[hidden]right- CustomUserDetailsService
CustomUserDetailsService -[hidden]right- SecurityUtils
RegisterRequest -[hidden]down- LoginRequest
LoginRequest -[hidden]down- GoogleLoginRequest
GoogleLoginRequest -[hidden]down- AuthResponse

' Relatii principale -----------------------------------------
SecurityConfig --> JwtAuthFilter
AuthController --> UserRepository
AuthController --> JwtUtil
AuthController ..> Google : verifica ID Token

JwtAuthFilter --> JwtUtil
JwtAuthFilter --> CustomUserDetailsService
WebSocketAuthInterceptor --> JwtUtil
WebSocketAuthInterceptor --> CustomUserDetailsService
CustomUserDetailsService --> UserRepository
SecurityUtils --> UserRepository

' DTOs (grupate, fara sageti zgomotoase) ---------------------
AuthController ..> PD : foloseste

' Plasare DTO si Google in lateral ---------------------------
PC -[hidden]right- PD
PSec -[hidden]right- Google

@enduml
